# coara-browser

./: NOTICE.md  README.md  build_all.sh  build_all_android.sh  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/coara/browser/: IBrowserOpt.aidl
app/src/main/assets/: LICENSE.MD  index.html  secret.html
app/src/main/java/com/coara/browser/: BackgroundBrowserActivity.java  BackgroundManager.java  BrowserOptService.java  DownloadHistoryActivity.java  DownloadHistoryManager.java  MainActivity.java  PageBg.java  QrCodeActivity.java  SecretActivity.java  SettingsActivity.java  exec.java  grepmd5appActivity.java  htmlview.java  num.java  pagedl.java  urlSchemeService.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  browseropt.cpp
app/src/main/res/drawable/: ic_dark_mode.xml  ic_download2.xml
app/src/main/res/layout/: activity_main.xml  activity_pgdl.xml  num.xml
app/src/main/res/menu/: top_app_bar_menu.xml
app/src/main/res/values/: styles.xml
